--- a/homepage.html
+++ b/homepage.html
@@ -29,14 +29,60 @@
         <div class="mainInfo-homepage">
             <div class="contenedor-eslogan">
                 <h1 style="font-size: 50PX; font-weight: bold;">ALL YOU CAN</h1><br><h1 style="font-size: 50PX; font-weight: bold;">READ</h1>
-                <br><br>
-                <h5>ENCUENTRA LIBROS QUE HAGAN MATCH CONTIGO</h5>
+                <h5 style="margin-top: 50px; opacity: 60%;">ENCUENTRA LIBROS QUE HAGAN MATCH CONTIGO</h5>
+                <button class="boton-comprarAhora">
+                    <p style="color: white;">Comprar Ahora</p>
+                </button>
+                    <img src="img/numerodeventas.png" class="imagen-ventas">
             </div>
+            <div class="contenedor-imagenVentas">
+                <img src="img/librosHomepage.jpeg" alt="libros" class="imagenHomepage">
+            </div>
+        </div>
 
-            <img src="img/librosHomepage.jpeg" alt="libros" >
+        <div class="franja-marcas">
+            <ul class="lista-horizontal">
+                <li><img src="img/anagrama.png"></li>
+                <li><img src="img/phaidon.png"></li>
+                <li><img src="img/alfaguara.png" alt="" srcset=""></li>
+            </ul>
         </div>
         
+        <div class="seccion-libros">
+            <h1 class="titulo">Nuevos Productos</h1>
+
+        </div>
         
+        <div class="seccion-libros" style="border-bottom: none;">
+            <h1 class="titulo">Best Sellers</h1>
+        </div>
     </main>
+
+    <footer>
+        <div class="contenedor-footer">
+            <div class="info-footer">
+                <ul class="listaInfo-footer">
+                    <li><img src="img/logo.png" class="logo-footer"></li>
+                    <li>
+                        <div>
+                            <p class="titulo-footer">ATENCION A CLIENTE</p>
+                            <p>+ 52 3312345678</p>
+                            <p>amazinbooks@gmail.com</p>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div>
+                            <p>SIGUENOS EN NUESTRAS REDES </p>
+                            <img src="img/logos-redes.png">
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="metodosDePago-footer">
+                <img src="img/metodos-pago.png" alt="">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
