--- a/perfil.html
+++ b/perfil.html
@@ -3,7 +3,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Abel&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Allerta&display=swap" rel="stylesheet" />
-    <link href="./css/main.css" rel="stylesheet" />
+    <link href="./css/estiloperfil.css" rel="stylesheet" />
     <title>Document</title>
 </head>
 <body>
