--- a/homepage.html
+++ b/homepage.html
@@ -14,11 +14,12 @@
                 <h1><img src="img/logo.png" alt="Logo" class="logo-header"></h1>
                 <nav>
                     <ul>
-                        <li>Comprar</li>
-                        <li>Rebajas</li>
-                        <li>Nuevos Productos</li>
-                        <li>Pagina Principal</li>
-                        <li></li>
+                        <li><a>Comprar</a></li>
+                        <li><a>Rebajas</a></li>
+                        <li><a>Nuevos Productos</a></li>
+                        <li><a href="homepage.html">Pagina Principal</a></li>
+                        <li><a href="carrito.html"><img src="img/carrito.png" style="height: 27px; width: 30px;"></a></li>
+                        <li><a><img src="img/perfiil.png" style="height: 27px; width: 30px;"></a></li>
                     </ul>
                 </nav>
             </div>
