--- a/homepage.html
+++ b/homepage.html
@@ -51,11 +51,56 @@
         
         <div class="seccion-libros">
             <h1 class="titulo">Nuevos Productos</h1>
-
+            <div class="librosdis">
+                <div class="producto">
+                    <img class="libro-imagen2" src="./img/libro5.jpg" alt="">
+                    <div class="libro-detalles">
+                        <h3 class="libro-titulo">El Principe Cruel</h3>
+                        <p class="libro-precio">$200</p>
+                    </div>
+                </div>
+                <div class="producto">
+                    <img class="libro-imagen2" src="./img/libro10.jpg" alt="">
+                    <div class="libro-detalles">
+                        <h3 class="libro-titulo">El Alquimista</h3>
+                        <p class="libro-precio">$250</p>
+                    </div>
+                </div>
+                <div class="producto">
+                    <img class="libro-imagen2" src="./img/libro9.jpg" alt="">
+                    <div class="libro-detalles">
+                        <h3 class="libro-titulo">Sapiens</h3>
+                        <p class="libro-precio">$300</p>
+                    </div>
+                </div>
+            </div>
         </div>
         
         <div class="seccion-libros" style="border-bottom: none;">
             <h1 class="titulo">Best Sellers</h1>
+            <div class="librosdis">
+                <div class="producto">
+                    <img class="libro-imagen2" src="./img/libro9.jpg" alt="">
+                    <div class="libro-detalles">
+                        <h3 class="libro-titulo">Sapiens</h3>
+                        <p class="libro-precio">$300</p>
+                    </div>
+                </div>
+                <div class="producto">
+                    <img class="libro-imagen2" src="./img/libro11.jpg" alt="">
+                    <div class="libro-detalles">
+                        <h3 class="libro-titulo">Rebelion en la granja</h3>
+                        <p class="libro-precio">$270</p>
+                    </div>
+                </div>
+                <div class="producto">
+                    <img class="libro-imagen2" src="./img/libro8.jpg" alt="">
+                    <div class="libro-detalles">
+                        <h3 class="libro-titulo">A Traves de mi Ventana</h3>
+                        <p class="libro-precio">$200</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
@@ -87,3 +132,4 @@
     </footer>
 </body>
 </html>
+
